# evaluator

./: .codeclimate.yml  .eslintrc  .gitignore  .rubocop.yml  Gemfile  LICENSE  README.md
.github/: dependabot.yml
client/: bower.json  package.json
cmake_modules/: FindLibUV.cmake  FindPackageHandleStandardArgs.cmake  FindUuid.cmake
db/: schema.rb
deployment/: README.md
deployment/instance/: .gitignore  README.md  evaluator-sidekiq.service  sidekiq.yml  unicorn.conf.rb
deployment/misc/: disable.thp.md  evaluator.metguc.in.exports  locale.md  mnt-evaluator.mount  nfs.md  rbenv.md  ssh-tunnel.service  ssh_only_firewall.md  ssh_tunnel.md  swap.md  tcp_settings.md
deployment/nginx/: dependencies.md  file_limit.md  firewall.md  nginx.conf  nginx.md  permissions.md  ssl.md  swap.md
deployment/pg/: README.md  postgresql.conf
deployment/redis/: README.md  cache.conf  messaging.conf
deployment/worker/: LXC.md  README.md
doc/: ENV_VARS.md
evaluator_api/: .gitignore  Gemfile  README.md  TODO.md
evaluator_api/app/controllers/: application_controller.rb  tokens_controller.rb
evaluator_api/app/exceptions/: captcha_error.rb
evaluator_api/app/jobs/: submission_evaluation_job.rb  submissions_culling_job.rb
evaluator_api/app/mailers/: application_mailer.rb  pass_reset_email.text.erb  user_mailer.rb
evaluator_api/app/models/: contact.rb  course.rb  project.rb  project_bundle.rb  reset_token.rb  result.rb  solution.rb  student_course_registration.rb  studentship.rb  submission.rb  suite_case.rb  suite_code.rb  team_job.rb  test_case.rb  test_suite.rb  user.rb  verification_token.rb
evaluator_api/app/services/: aes_encrypt_service.rb  hmac_service.rb  messaging_service.rb  recaptcha_service.rb
evaluator_api/config/: application.rb  argon.yml  cable.yml  credentials.yml.enc  database.yml  routes.rb
evaluator_api/config/environments/: development.rb  production.rb  test.rb
evaluator_api/config/initializers/: argon.rb  config_opts.rb  host.rb  jwt.rb  mailer.rb  redis.rb  reset_verify_token.rb  resque.rb  storage.rb
evaluator_api/db/: schema.rb
evaluator_api/db/migrate/: 20151228111701_create_users.rb  20151228201037_create_courses.rb  20151228202624_create_studentships.rb  20151229181829_create_projects.rb  20151230200306_create_submissions.rb  20151230200422_create_solutions.rb  20151230200943_create_test_suites.rb  20151230201043_create_results.rb  20151230201226_create_test_cases.rb  20151230201252_create_suite_codes.rb  20151230201406_create_suite_cases.rb  20151230214238_create_team_grades.rb  20151231210842_create_verification_tokens.rb  20151231221819_create_reset_tokens.rb  20160130154041_remove_test_timout_seconds_from_projects.rb  20160201183854_fix_foreign_key_constraints.rb  20160201193747_fix_suite_codes_foreign_key.rb  20160205192808_create_team_jobs.rb  20160206132742_create_project_bundles.rb  20160206152224_fix_team_job_foreign_key_constraint.rb  20160206152429_fix_project_bundle_foreign_keys.rb  20160206232613_add_created_at_index_to_submissions.rb  20160211105116_adds_super_user_to_users.rb  (+38 more)
evaluator_api/spec/: rails_helper.rb  spec_helper.rb
evaluator_spec_lib/: CMakeLists.txt  EvspecConfig.cmake.in  EvspecConfigVersion.cmake.in  README.md  cmake_install.cmake  cmake_modules  evspec.ld.conf  evspeclib.pc.in
evaluator_spec_lib/fixtures/privatetests/: M2PrivateTests.java
evaluator_spec_lib/fixtures/publictests/: M2PublicTests.java
evaluator_spec_lib/src/: CMakeLists.txt  delete_ctx.cpp  evaluate_submission.cpp  exit_handler.cpp  lib_xml_raii.cpp  main.cpp  process.cpp  spec.cpp  utils.cpp
evaluator_spec_lib/src/include/: dll_imports.h  ev_spec_types.h  evspec.h  java.h  process.h  utils.h
evaluator_spec_lib/src/include/internal/: java.h  lxc.h  sftp_file.h  sftp_session_t.h  ssh_command_t.h  ssh_session_t.h  utils.h  virtual_base.h
evaluator_spec_lib/src/include/raii/: scope_rai.h
evaluator_spec_lib/src/java/: compilation.cpp  eclipse.cpp  extraction.cpp  parse_results.cpp  pom.cpp  run.cpp
evaluator_spec_lib/src/lxc/: lxc_ctx_t.cpp  make_virt_ctx.cpp
evaluator_spec_lib/src/ssh/: session_t.cpp  sftp_file_t.cpp  sftp_session_t.cpp  ssh_command_t.cpp
evaluator_spec_lib/src/test/: java_specs.cpp  ssh_specs.cpp
evaluator_worker/: CMakeLists.txt  README.md
evaluator_worker/fixtures/: bad_config.ini  sample_config.ini
evaluator_worker/src/: CMakeLists.txt  daemon_main.cpp  worker_main.cpp
evaluator_worker/src/db/: helpers.cpp  pg.cpp  project.cpp  submission.cpp  test_suite.cpp
evaluator_worker/src/include/: globals.h  message_types.h  options.h  pg_ctx.h  records.h  redis_ctx.h  signal_handlers.h  utils.h  worker.h  worker_ctx.h
evaluator_worker/src/include/db/: helpers.h  pg_ctx.h  pg_result.h  project.h  result.h  submission.h  test_suite.h  types.h
evaluator_worker/src/include/messaging/: message.h  types.h
evaluator_worker/src/include/redis/: redis.h
evaluator_worker/src/messaging/: message_generation.cpp  message_parsing.cpp  types.cpp
evaluator_worker/src/options/: options_config.cpp  parse_options.cpp
evaluator_worker/src/redis/: redis.cpp  reply.cpp
evaluator_worker/src/signals/: atomic_globals.cpp  handlers.cpp
evaluator_worker/src/test/: options_spec.cpp  pg_spec.cpp  redis_spec.cpp  worker_specs.cpp
evaluator_worker/src/utility/: constants.cpp  pid_helpers.cpp  print_exception.cpp  write_backtrace.cpp
evaluator_worker/src/worker/: pg.cpp  redis.cpp  worker.cpp  worker_ctx_raii.cpp  worker_ctx_redis.cpp
frontend/: bower.json  gulpfile.js  package-lock.json  package.json
frontend/gulp-tasks/: scripts.js  templates.js
frontend/src/: app.coffee  index.html
pub_sub_server/: PROTOCOL.md  package-lock.json  package.json  server.js
pub_sub_server/auth/: index.js  subscription-handlers.js
pub_sub_server/config/: index.js
pub_sub_server/db/: index.js  pool.js  query.js  user.js
web_client/: .babelrc  .eslintrc  .gitignore  README.md  package.json  tsconfig.json  tslint.json  webpack.config.js
web_client/src/: index.html  main.js  main.scss  main.ts  polyfills.ts
(+94 files in other folders)
